--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[Project Instructions](./INSTRUCTIONS.md), this line may be removed once you have updated the README.md",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start:dev": "nodemon server/server.js",
+    "start:prod": "node server/server.js",
     "start:test": "export NODE_ENV=test && node server/server.js",
     "cypress:run": "cypress run --config-file cypress.config.js",
     "test": "start-server-and-test start:test http://localhost:5002 cypress:run"
@@ -21,4 +22,3 @@
     "start-server-and-test": "^2.0.1"
   }
 }
-
